--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "web",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ui": "*"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-custom": "*",
-    "next-transpile-modules": "9.0.0",
-    "tsconfig": "*",
-    "@types/node": "^17.0.12",
-    "@types/react": "18.0.17",
-    "typescript": "^4.5.3"
-  }
+    "name": "@cz/web",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@mantine/core": "^5.4.0",
+        "@mantine/dates": "^5.4.0",
+        "@mantine/dropzone": "^5.4.0",
+        "@mantine/form": "^5.4.0",
+        "@mantine/hooks": "^5.4.0",
+        "@mantine/modals": "^5.4.0",
+        "@mantine/notifications": "^5.4.0",
+        "@tanstack/react-query": "^4.3.9",
+        "dayjs": "^1.11.5",
+        "phosphor-react": "^1.4.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@vitejs/plugin-react": "^2.1.0",
+        "typescript": "^4.6.4",
+        "vite": "^3.1.0"
+    }
 }
