--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,19 @@
 {
-  "$schema": "https://turborepo.org/schema.json",
-  "pipeline": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
-    },
-    "lint": {
-      "outputs": []
-    },
-    "dev": {
-      "cache": false
+    "$schema": "https://turborepo.org/schema.json",
+    "pipeline": {
+        "build": {
+            "dependsOn": ["^build"],
+            "outputs": ["dist/**", "build/**"]
+        },
+        "//#scripts:build": {
+            "dependsOn": ["^build"],
+            "outputs": []
+        },
+        "dev": {
+            "cache": false
+        },
+        "clean": {
+            "cache": false
+        }
     }
-  }
 }
