--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@emotion/react": "^11.10.4",
+        "@hookstate/core": "^4.0.0-rc21",
         "@mantine/core": "^5.4.0",
         "@mantine/dates": "^5.4.0",
         "@mantine/dropzone": "^5.4.0",
