--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,12 +13,13 @@
     },
     "dependencies": {
         "@prisma/client": "^4.4.0",
+        "@trpc/server": "^10.0.0-proxy-beta.8",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "zod": "^3.19.1"
     },
     "devDependencies": {
         "@cz/config": "*",
@@ -27,6 +28,7 @@
         "@types/express": "^4.17.14",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.23",
+        "dotenv": "^16.0.2",
         "esbuild": "^0.15.9",
         "nodemon": "^2.0.20",
         "prisma": "^4.4.0",
