--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
         "build": "tsc && vite build"
     },
     "dependencies": {
+        "@cz/server": "*",
         "@emotion/react": "^11.10.4",
         "@hookstate/core": "^4.0.0-rc21",
         "@mantine/core": "^5.4.0",
@@ -17,7 +18,10 @@
         "@mantine/hooks": "^5.4.0",
         "@mantine/modals": "^5.4.0",
         "@mantine/notifications": "^5.4.0",
-        "@tanstack/react-query": "^4.3.9",
+        "@tanstack/react-query": "^4.7.1",
+        "@trpc/client": "^10.0.0-proxy-beta.8",
+        "@trpc/react": "^10.0.0-proxy-beta.8",
+        "@trpc/server": "^10.0.0-proxy-beta.8",
         "dayjs": "^1.11.5",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
