--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,20 +14,26 @@
     "dependencies": {
         "@prisma/client": "^4.4.0",
         "@trpc/server": "^10.0.0-proxy-beta.8",
+        "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
+        "uuid": "^9.0.0",
         "zod": "^3.19.1"
     },
     "devDependencies": {
         "@cz/config": "*",
+        "@types/bcryptjs": "^2.4.2",
         "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.23",
+        "@types/uuid": "^8.3.4",
         "dotenv": "^16.0.2",
         "esbuild": "^0.15.9",
         "nodemon": "^2.0.20",
