--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,7 @@
         "helmet": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
+        "node-ical": "^0.15.1",
         "uuid": "^9.0.0",
         "zod": "^3.19.1"
     },
