--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
         "@mantine/hooks": "^5.4.0",
         "@mantine/modals": "^5.4.0",
         "@mantine/notifications": "^5.4.0",
+        "@mantine/rte": "^5.4.0",
         "@tanstack/react-query": "^4.7.1",
         "@trpc/client": "^10.0.0-proxy-beta.8",
         "@trpc/react": "^10.0.0-proxy-beta.8",
