--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "dev": "nodemon src/server.ts",
-        "build": "esbuild src/server.ts --bundle --platform=node --outfile=build/index.js",
+        "build": "esno scripts/build.js",
         "db:pull": "prisma db pull",
         "db:push": "prisma db push",
         "db:generate": "prisma generate",
@@ -17,6 +17,7 @@
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
@@ -35,8 +36,9 @@
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.23",
         "@types/uuid": "^8.3.4",
-        "dotenv": "^16.0.2",
-        "esbuild": "^0.15.9",
+        "esno": "^0.16.3",
+        "execa": "^6.1.0",
+        "fs-extra": "^10.1.0",
         "nodemon": "^2.0.20",
         "prisma": "^4.4.0",
         "ts-node": "^10.9.1",
