--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "node-ical": "^0.15.1",
+        "superjson": "^1.11.0",
         "uuid": "^9.0.0",
         "zod": "^3.19.1"
     },
