--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,6 +7,10 @@
         "dev": "expo start --android"
     },
     "dependencies": {
+        "@cz/server": "*",
+        "@tanstack/react-query": "^4.7.1",
+        "@trpc/client": "^10.0.0-proxy-beta.8",
+        "@trpc/react": "^10.0.0-proxy-beta.8",
         "expo": "~46.0.16",
         "expo-status-bar": "~1.4.0",
         "native-base": "^3.4.21",
