Navigation and auth screens
Added react navigation and created login and signup pages

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -4,6 +4,7 @@
         "baseUrl": "src",
         "target": "ESNext",
         "module": "ESNext",
+        "strict": true,
         "paths": {
             "~/*": ["*"]
         },
