--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,6 +8,9 @@
     },
     "dependencies": {
         "@cz/server": "*",
+        "@react-navigation/native": "^6.0.13",
+        "@react-navigation/native-stack": "^6.9.1",
+        "@react-navigation/stack": "^6.3.4",
         "@tanstack/react-query": "^4.7.1",
         "@trpc/client": "^10.0.0-proxy-beta.8",
         "@trpc/react": "^10.0.0-proxy-beta.8",
@@ -16,8 +19,11 @@
         "native-base": "^3.4.21",
         "phosphor-react-native": "^1.1.2",
         "react": "18.0.0",
+        "react-hook-form": "^7.39.1",
         "react-native": "0.69.6",
+        "react-native-gesture-handler": "~2.5.0",
         "react-native-safe-area-context": "4.3.1",
+        "react-native-screens": "~3.15.0",
         "react-native-svg": "12.3.0"
     },
     "devDependencies": {
