--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -9,7 +9,7 @@
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
-            "backgroundColor": "#101113"
+            "backgroundColor": "#1A1B1E"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
@@ -21,8 +21,9 @@
         "android": {
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#101113"
-            }
+                "backgroundColor": "#1A1B1E"
+            },
+            "package": "com.cinzal.app"
         },
         "web": {
             "favicon": "./assets/favicon.png"
