--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,10 +4,15 @@
     "main": "index.js",
     "private": true,
     "scripts": {
-        "dev": "expo start --android"
+        "dev": "expo start --tunnel",
+        "start": "expo start --dev-client",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "sync": "expo prebuild"
     },
     "dependencies": {
         "@cz/server": "*",
+        "@expo/webpack-config": "^0.17.0",
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.1",
         "@react-navigation/stack": "^6.3.4",
@@ -15,16 +20,19 @@
         "@trpc/client": "^10.0.0-proxy-beta.8",
         "@trpc/react": "^10.0.0-proxy-beta.8",
         "expo": "~46.0.16",
+        "expo-splash-screen": "~0.16.2",
         "expo-status-bar": "~1.4.0",
         "native-base": "^3.4.21",
         "phosphor-react-native": "^1.1.2",
         "react": "18.0.0",
+        "react-dom": "18.0.0",
         "react-hook-form": "^7.39.1",
         "react-native": "0.69.6",
         "react-native-gesture-handler": "~2.5.0",
         "react-native-safe-area-context": "4.3.1",
         "react-native-screens": "~3.15.0",
-        "react-native-svg": "12.3.0"
+        "react-native-svg": "12.3.0",
+        "react-native-web": "~0.18.7"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
