Added global state
 - Added hookstate for global state
 - Copied same global state as the web version
 - Added dayjs for date handling

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,12 +13,14 @@
     "dependencies": {
         "@cz/server": "*",
         "@expo/webpack-config": "^0.17.0",
+        "@hookstate/core": "^4.0.0-rc21",
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.1",
         "@react-navigation/stack": "^6.3.4",
         "@tanstack/react-query": "^4.7.1",
         "@trpc/client": "^10.0.0-proxy-beta.8",
         "@trpc/react": "^10.0.0-proxy-beta.8",
+        "dayjs": "^1.11.6",
         "expo": "~46.0.16",
         "expo-splash-screen": "~0.16.2",
         "expo-status-bar": "~1.4.0",
