--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -9,7 +9,7 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "outDir": "build/src",
+        "outDir": "build",
         "rootDir": "src/"
     }
 }
