--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "@cz/server": "*",
         "@expo/webpack-config": "^0.17.0",
-        "@hookstate/core": "^4.0.0-rc21",
+        "@hookstate/core": "^4.0.0",
         "@react-navigation/bottom-tabs": "^6.4.0",
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.1",
