--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,7 @@
         "@expo/webpack-config": "^0.17.0",
         "@hookstate/core": "^4.0.0",
         "@react-navigation/bottom-tabs": "^6.4.0",
+        "@react-navigation/drawer": "^6.5.7",
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.1",
         "@react-navigation/stack": "^6.3.4",
@@ -33,6 +34,7 @@
         "react-hook-form": "^7.39.1",
         "react-native": "0.69.6",
         "react-native-gesture-handler": "~2.5.0",
+        "react-native-reanimated": "~2.9.1",
         "react-native-safe-area-context": "4.3.1",
         "react-native-screens": "~3.15.0",
         "react-native-svg": "12.3.0",
@@ -41,6 +43,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
+        "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@types/react": "^18.0.25",
         "@types/react-native": "^0.70.6",
         "typescript": "^4.8.4"
