--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,10 @@
         "@mantine/modals": "^5.9.5",
         "@mantine/notifications": "^5.9.5",
         "@mantine/rte": "^5.9.5",
-        "@tanstack/react-query": "^4.7.1",
-        "@trpc/client": "^10.0.0-proxy-beta.8",
-        "@trpc/react": "^10.0.0-proxy-beta.8",
-        "@trpc/server": "^10.0.0-proxy-beta.8",
+        "@tanstack/react-query": "^4.24.6",
+        "@trpc/client": "^10.11.0",
+        "@trpc/react-query": "^10.11.0",
+        "@trpc/server": "^10.11.0",
         "dayjs": "^1.11.5",
         "node-ical": "^0.15.2",
         "phosphor-react": "^1.4.1",
