--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,15 +11,25 @@
         "@cz/server": "*",
         "@emotion/react": "^11.10.4",
         "@hookstate/core": "^4.0.0-rc21",
-        "@mantine/core": "^5.9.5",
-        "@mantine/dates": "^5.9.5",
-        "@mantine/dropzone": "^5.9.5",
-        "@mantine/form": "^5.9.5",
-        "@mantine/hooks": "^5.9.5",
-        "@mantine/modals": "^5.9.5",
-        "@mantine/notifications": "^5.9.5",
-        "@mantine/rte": "^5.9.5",
+        "@mantine/core": "^5.10.3",
+        "@mantine/dates": "^5.10.3",
+        "@mantine/dropzone": "^5.10.3",
+        "@mantine/form": "^5.10.3",
+        "@mantine/hooks": "^5.10.3",
+        "@mantine/modals": "^5.10.3",
+        "@mantine/notifications": "^5.10.3",
+        "@mantine/tiptap": "^5.10.3",
+        "@tabler/icons": "1.119.0",
         "@tanstack/react-query": "^4.24.6",
+        "@tiptap/extension-highlight": "^2.0.0-beta.217",
+        "@tiptap/extension-link": "^2.0.0-beta.217",
+        "@tiptap/extension-subscript": "^2.0.0-beta.217",
+        "@tiptap/extension-superscript": "^2.0.0-beta.217",
+        "@tiptap/extension-text-align": "^2.0.0-beta.217",
+        "@tiptap/extension-underline": "^2.0.0-beta.217",
+        "@tiptap/pm": "^2.0.0-beta.217",
+        "@tiptap/react": "^2.0.0-beta.217",
+        "@tiptap/starter-kit": "^2.0.0-beta.217",
         "@trpc/client": "^10.11.0",
         "@trpc/react-query": "^10.11.0",
         "@trpc/server": "^10.11.0",
