--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,7 @@
         "node-ical": "^0.15.1",
         "superjson": "^1.11.0",
         "uuid": "^9.0.0",
+        "ws": "^8.13.0",
         "zod": "^3.19.1"
     },
     "devDependencies": {
@@ -37,6 +38,7 @@
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.23",
         "@types/uuid": "^8.3.4",
+        "@types/ws": "^8.5.4",
         "esno": "^0.16.3",
         "execa": "^6.1.0",
         "fs-extra": "^10.1.0",
